fix: update swagger api
